@@ -9,13 +9,13 @@
 }
 \usage{
 mnorm(order, mean = 0, sd = 1)
-mgfnorm(x, mean = 0, sd = 1, log = FALSE)
+mgfnorm(t, mean = 0, sd = 1, log = FALSE)
 }
 \arguments{
   \item{order}{vector of integers; order of the moment.}
   \item{mean}{vector of means.}
   \item{sd}{vector of standard deviations.}
-  \item{x}{numeric vector.}
+  \item{t}{numeric vector.}
   \item{log}{logical; if \code{TRUE}, the cumulant generating function
     is returned.}
 }
@@ -29,7 +29,7 @@ mgfnorm(x, mean = 0, sd = 1, log = FALSE)
 \value{
   \code{mnorm} gives the \eqn{k}th raw moment and
   \code{mgfnorm} gives the moment generating function in \code{x}.
-  
+
   Invalid arguments will result in return value \code{NaN}, with a warning.
 }
 \seealso{
